Fixed some rendering issues on mobile devices

--- a/wcfsetup/install/files/style/message.less
+++ b/wcfsetup/install/files/style/message.less
@@ -1005,7 +1005,7 @@ li:nth-child(2n+1) .message {
 		padding: 7px;
 	}
 	
-	.message .messageBody > div:not(.messageFooter) {
+	.message .messageBody > div:not(.messageFooter):not(.messageTabMenu):not(.redactor-box) {
 		padding: 7px 0;
 	}
 	
